k8/services/gitlab-ce/service-ssh.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ssh
  labels:
    app.kubernetes.io/name: gitlab
    app.kubernetes.io/component: ssh
    app.kubernetes.io/part-of: gitlab
  annotations:
    metallb.universe.tf/loadBalancerIPs: "192.168.64.202"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: gitlab
    app.kubernetes.io/component: server
  ports:
    - name: ssh
      port: 22
      targetPort: 22
      protocol: TCP
