k8/services/gitlab-ce/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  labels:
    app.kubernetes.io/name: gitlab
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: gitlab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gitlab
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
