k8/services/gitlab-ce/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gitlab.development.cfapps.cool`)
      kind: Rule
      services:
        - name: gitlab
          port: 80
  tls: {}
